Updates for Week 3 assignment

--- a/working_notebooks/notes.ipynb
+++ b/working_notebooks/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "arbitrary-casting",
+   "id": "professional-basket",
    "metadata": {},
    "source": [
     "# Vegetation Restoration Monitoring - Project Notes"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-constant",
+   "id": "alternate-designer",
    "metadata": {},
    "source": [
     "## Methods\n",
@@ -23,28 +23,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bigger-catering",
+   "id": "therapeutic-combination",
    "metadata": {},
    "source": [
     "## Meeting notes\n",
     "- 5/6/21 (Steve/Nayani):\n",
-    "  - Use statistics to classify time series for all polygons"
+    "  - Use statistics to classify time series for all polygons\n",
+    "- 5/27/21 (Steve/Nayani):\n",
+    "  - Nayani shared Rangelands monitoring app stuff:\n",
+    "    - https://rangelands.app/rap/?biomass_t=herbaceous&ll=38.8633,-110.4298&z=5&landcover_t=pfgc\n",
+    "    - https://www.mdpi.com/2072-4292/11/12/1427/htm\n",
+    "    - https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/ecs2.2430\n",
+    "  - Consider how I can fit trends lines to the raw Sentinel 2/Landsat time series\n",
+    "  - Steve: \n",
+    "    - 10 years of monitoring is required after any significant intervention (e.g. seeding, re-seeding) until bond release\n",
+    "    - Issues at McKinley: achieving good cover but plant functional type makeup is a bit out of whack; i.e. more shrubs than grasses, more of a particular type of grass is required.\n",
+    "  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "peripheral-booking",
+   "id": "orange-tennessee",
    "metadata": {},
    "source": [
     "## TODO list\n",
-    "- Add notebook for Landsat time series extraction\n",
-    "- Filter out snow dates\n",
-    "- Add in configuration file link for SentinelHub API key for security purposes"
+    "- Add notebook for Landsat time series extraction:\n",
+    "  - Not currently possible with FIS or Statistical API as Landsat data is hosted in US West; revisit https://docs.sentinel-hub.com/api/latest/api/statistical/ to see if this changes\n",
+    "  - Create new workflow to download NDVI chips for Landsat time series\n",
+    "- ~~Filter out snow dates~~\n",
+    "- ~~Add in configuration file link for SentinelHub API key for security purposes~~\n",
+    "- ~~Add in numbered workflow jupyter notebooks~~"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "employed-judges",
+   "id": "acting-completion",
    "metadata": {},
    "source": [
     "## Past notes\n",
@@ -68,7 +81,59 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaning-atmosphere",
+   "id": "adopted-parker",
+   "metadata": {},
+   "source": [
+    "## Code snippets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "accredited-algorithm",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-903c7c2506db>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-903c7c2506db>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    //VERSION=3\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "//VERSION=3\n",
+    "\n",
+    "function evaluatePixel(samples) {\n",
+    "    let val = [samples.B01, samples.B02, samples.B03,samples.B04, samples.B05, samples.B06, samples.B07];\n",
+    "    return val;\n",
+    "}\n",
+    "\n",
+    "function setup() {\n",
+    "  return {\n",
+    "    input: [{\n",
+    "      bands: [\n",
+    "        \"B01\",\n",
+    "        \"B02\",\n",
+    "        \"B03\",\n",
+    "        \"B04\",\n",
+    "        \"B05\",\n",
+    "        \"B06\",\n",
+    "        \"B07\"\n",
+    "      ]\n",
+    "    }],\n",
+    "    output: {\n",
+    "      bands: 7\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "clear-adams",
    "metadata": {},
    "source": [
     "## References\n",
