--- a/working_notebooks/notes.ipynb
+++ b/working_notebooks/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "professional-basket",
+   "id": "bibliographic-postcard",
    "metadata": {},
    "source": [
     "# Vegetation Restoration Monitoring - Project Notes"
@@ -10,20 +10,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternate-designer",
+   "id": "accomplished-reducing",
    "metadata": {},
    "source": [
     "## Methods\n",
     "- Import and filter seeding units data\n",
     "- Extract Landsat and Sentinel 2 time series for each seeding unit\n",
-    "- Perform classification of time series for all SU polygons\n",
-    "- Analysis of seeding unit classes? What do these classes represent?\n",
+    "- Perform smoothing, curve fitting of time series data\n",
+    "- Perform unsupervised classification of time series for all SU polygons\n",
+    "- Analysis of seeding unit classes? What do these classes represent? Is there a correlation between seeding unit properties (e.g. seeding start) and classes identified from classification\n",
     "- Analyse classes with reference to climate/weather data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "therapeutic-combination",
+   "id": "otherwise-collapse",
    "metadata": {},
    "source": [
     "## Meeting notes\n",
@@ -38,12 +39,21 @@
     "  - Steve: \n",
     "    - 10 years of monitoring is required after any significant intervention (e.g. seeding, re-seeding) until bond release\n",
     "    - Issues at McKinley: achieving good cover but plant functional type makeup is a bit out of whack; i.e. more shrubs than grasses, more of a particular type of grass is required.\n",
+    "- 6/3/21 (Nayani):\n",
+    "  - Discussed calibration of Sentinel 2 with Landsat 8 time series; would need to identify coincident scenes, calculate NDVI and then perform linear regression. Apply gain and offset to Landsat 8 NDVI. Nayani will work on code to do this.\n",
+    "  - Smoothing windows with 12 month average:\n",
+    "    - https://coderzcolumn.com/tutorials/data-science/time-series-resampling-and-moving-window-functions\n",
+    "    - https://coderzcolumn.com/tutorials/data-science/how-to-remove-trend-and-seasonality-from-time-series-data-using-python-pandas#6\n",
+    "  - Next steps:\n",
+    "    - Calculate slope\n",
+    "    - Perform unsupervised classification of smoothed temporal curves\n",
+    "    - Investigate correlations between seeding unit data and classes\n",
     "  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "orange-tennessee",
+   "id": "brown-bunch",
    "metadata": {},
    "source": [
     "## TODO list\n",
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acting-completion",
+   "id": "cosmetic-chrome",
    "metadata": {},
    "source": [
     "## Past notes\n",
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adopted-parker",
+   "id": "immune-eight",
    "metadata": {},
    "source": [
     "## Code snippets"
@@ -90,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "accredited-algorithm",
+   "id": "laden-iraqi",
    "metadata": {},
    "outputs": [
     {
@@ -132,12 +142,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "normal-horse",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -e "
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "clear-adams",
+   "id": "every-chassis",
    "metadata": {},
    "source": [
     "## References\n",
-    "https://www.nature.com/articles/s41598-019-43544-5"
+    "- Assessment of forest restoration with multitemporal remote sensing imagery: https://www.nature.com/articles/s41598-019-43544-5\n",
+    "- Analysis of vegetation recovery surrounding a restored wetland using the normalized difference infrared index (NDII) and normalized difference vegetation index (NDVI): https://www.tandfonline.com/doi/full/10.1080/01431161.2018.1437297\n",
+    "- Rangeland Productivity Partitioned to Sub-Pixel Plant Functional Types: https://rangelands.app/rap/?biomass_t=herbaceous&ll=38.8633,-110.4298&z=5&landcover_t=pfgc\n",
+    "- Innovation in rangeland monitoring: annual, 30 m, plant functional type percent cover maps for U.S. rangelands, 1984–2017: https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/ecs2.2430\n",
+    "- https://gro-intelligence.com/notebooks/Sao_Paulo_brazil_sugar_content_modeling.html"
    ]
   }
  ],
