Added new code for Landsat 8 analysis

--- a/working_notebooks/notes.ipynb
+++ b/working_notebooks/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bibliographic-postcard",
+   "id": "sought-bonus",
    "metadata": {},
    "source": [
     "# Vegetation Restoration Monitoring - Project Notes"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accomplished-reducing",
+   "id": "affecting-representation",
    "metadata": {},
    "source": [
     "## Methods\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "otherwise-collapse",
+   "id": "valued-sally",
    "metadata": {},
    "source": [
     "## Meeting notes\n",
@@ -53,13 +53,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brown-bunch",
+   "id": "professional-toddler",
    "metadata": {},
    "source": [
     "## TODO list\n",
-    "- Add notebook for Landsat time series extraction:\n",
-    "  - Not currently possible with FIS or Statistical API as Landsat data is hosted in US West; revisit https://docs.sentinel-hub.com/api/latest/api/statistical/ to see if this changes\n",
-    "  - Create new workflow to download NDVI chips for Landsat time series\n",
+    "- Update Landsat code to use L2: https://forum.sentinel-hub.com/t/wms-request-of-landsat-8-level-2/3910\n",
+    "- ~~Add notebook for Landsat time series extraction:~~\n",
+    "  - ~~Not currently possible with FIS or Statistical API as Landsat data is hosted in US West; revisit https://docs.sentinel-hub.com/api/latest/api/statistical/ to see if this changes~~\n",
+    "  - ~~Create new workflow to download NDVI chips for Landsat time series~~\n",
     "- ~~Filter out snow dates~~\n",
     "- ~~Add in configuration file link for SentinelHub API key for security purposes~~\n",
     "- ~~Add in numbered workflow jupyter notebooks~~"
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cosmetic-chrome",
+   "id": "quick-somerset",
    "metadata": {},
    "source": [
     "## Past notes\n",
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "immune-eight",
+   "id": "ongoing-electricity",
    "metadata": {},
    "source": [
     "## Code snippets"
@@ -100,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "laden-iraqi",
+   "id": "present-collectible",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "normal-horse",
+   "id": "every-belly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-chassis",
+   "id": "speaking-yeast",
    "metadata": {},
    "source": [
     "## References\n",
