Commit with final blog assignment

--- a/final_notebooks/3-preprocess-rs-timeseries.ipynb
+++ b/final_notebooks/3-preprocess-rs-timeseries.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "tight-mediterranean",
+   "id": "built-device",
    "metadata": {},
    "source": [
     "# 3 - Pre-process remote sensing time series\n",
-    "This notebook opens and applies curve fitting to the Sentinel 2 and Landsat 8 time series"
+    "This notebook applies reinterpolation and smoothing to time series"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-layout",
+   "id": "fancy-canada",
    "metadata": {},
    "source": [
     "## Setup"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "incomplete-rental",
+   "id": "hundred-villa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "potential-strike",
+   "id": "directed-calgary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "based-tattoo",
+   "id": "outstanding-concept",
    "metadata": {},
    "source": [
     "## Restore RS time series data"
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "indirect-helping",
+   "id": "graphic-telephone",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-huntington",
+   "id": "dangerous-communication",
    "metadata": {},
    "source": [
     "## Resample data to consistent temporal sampling"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "literary-personality",
+   "id": "valued-capture",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "facial-violation",
+   "id": "wicked-upgrade",
    "metadata": {},
    "source": [
     "## Calculate moving window"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "academic-pixel",
+   "id": "finite-rubber",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-liberia",
+   "id": "portuguese-peeing",
    "metadata": {},
    "source": [
     "## Plot the results"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "supposed-minutes",
+   "id": "interracial-national",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "urban-lincoln",
+   "id": "recorded-celtic",
    "metadata": {},
    "source": [
     "## Save the DF for use in subsequent notebooks"
@@ -503,11 +503,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "persistent-furniture",
+   "id": "confused-april",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'landsat_8_time_series_rlmean' (DataFrame)\n"
+     ]
+    }
+   ],
    "source": [
-    "#%store mckinley_seeding_subset_PARlo"
+    "%store landsat_8_time_series_rlmean"
    ]
   }
  ],
