--- a/working_notebooks/notes.ipynb
+++ b/working_notebooks/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sought-bonus",
+   "id": "floating-private",
    "metadata": {},
    "source": [
     "# Vegetation Restoration Monitoring - Project Notes"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affecting-representation",
+   "id": "incident-variation",
    "metadata": {},
    "source": [
     "## Methods\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valued-sally",
+   "id": "partial-greek",
    "metadata": {},
    "source": [
     "## Meeting notes\n",
@@ -48,27 +48,48 @@
     "    - Calculate slope\n",
     "    - Perform unsupervised classification of smoothed temporal curves\n",
     "    - Investigate correlations between seeding unit data and classes\n",
+    "- 6/10/21 (Steve):\n",
+    "  - Comparison of NDVI time series trends with weather climate:\n",
+    "    - Compare precipitation and temperature from winter to summer seasons with NDVI time series\n",
+    "    - Compare annual NDVI trends extracted from long-term trends; i.e. what is short term weather-NDVI linkage\n",
     "  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "professional-toddler",
+   "id": "divided-kenya",
+   "metadata": {},
+   "source": [
+    "## Tutorials\n",
+    "Time series clustering:\n",
+    "- https://towardsdatascience.com/time-series-decomposition-and-statsmodels-parameters-69e54d035453\n",
+    "- https://towardsdatascience.com/how-to-apply-k-means-clustering-to-time-series-data-28d04a8f7da3\n",
+    "- https://towardsdatascience.com/how-to-apply-k-means-clustering-to-time-series-data-28d04a8f7da3\n",
+    "\n",
+    "Multiple plots: https://colab.research.google.com/drive/1UClcI-PDx9TG4CiX1k14NAyp_JXO_bxv#scrollTo=uJu5JEeFe50E"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "spatial-scheduling",
    "metadata": {},
    "source": [
     "## TODO list\n",
-    "- Update Landsat code to use L2: https://forum.sentinel-hub.com/t/wms-request-of-landsat-8-level-2/3910\n",
+    "- ~~Update Landsat code to use L2: https://forum.sentinel-hub.com/t/wms-request-of-landsat-8-level-2/3910~~\n",
     "- ~~Add notebook for Landsat time series extraction:~~\n",
     "  - ~~Not currently possible with FIS or Statistical API as Landsat data is hosted in US West; revisit https://docs.sentinel-hub.com/api/latest/api/statistical/ to see if this changes~~\n",
     "  - ~~Create new workflow to download NDVI chips for Landsat time series~~\n",
     "- ~~Filter out snow dates~~\n",
     "- ~~Add in configuration file link for SentinelHub API key for security purposes~~\n",
-    "- ~~Add in numbered workflow jupyter notebooks~~"
+    "- ~~Add in numbered workflow jupyter notebooks~~\n",
+    "- Plots of the seeding unit data\n",
+    "- Re-assess how seeding units are being filtered or removed from analysis\n",
+    "- aWhere data access and download"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "quick-somerset",
+   "id": "light-despite",
    "metadata": {},
    "source": [
     "## Past notes\n",
@@ -87,12 +108,18 @@
     "  \n",
     "#### Ideas\n",
     "- What is trajectory of different vegetation indices and how do these relate to different vegetation functional types? i.e. shrubs vs grasses?\n",
-    "- Is NDVI actually useful? Can it quantify shrubby cover?"
+    "- Is NDVI actually useful? Can it quantify shrubby cover?\n",
+    "- Potential statistical analyses:\n",
+    "  - 1) Is there a relationship between the general temporal trends in NDVI and when units were seeded/re-seeded?\n",
+    "  - 2) What is the trend/slope in NDVI after seeding/reseeding over the short and long term?\n",
+    "  - 3) What is the impact of weather/climate variables on the NDVI trends over the short and long term?\n",
+    "  - 4) Is there a relationship between acres seeded/re-seeded and weather/climate variables? Was there a hold put on seeding efforts due to drought conditions?\n",
+    "  - 5) Are there seeding units of concern? i.e. are there seeding units where the trend in NDVI is lower than the mean? Are there areas that cross-cut seeding units that are of concern; can we identify pixels with this trend and define new seeding units for future action?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-electricity",
+   "id": "discrete-blind",
    "metadata": {},
    "source": [
     "## Code snippets"
@@ -101,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "present-collectible",
+   "id": "patient-borough",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "every-belly",
+   "id": "available-strain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "speaking-yeast",
+   "id": "apart-angle",
    "metadata": {},
    "source": [
     "## References\n",
