Added notebooks 5 and 6

--- a/final_notebooks/2b-landsat-time-series.ipynb
+++ b/final_notebooks/2b-landsat-time-series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "equipped-forge",
+   "id": "opposite-prisoner",
    "metadata": {},
    "source": [
     "# 2b - Create Landsat 8 time series for McKinley Mine seeding units\n",
@@ -11,8 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "apparent-trunk",
+   "execution_count": 2,
+   "id": "ordinary-savage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "adolescent-peter",
+   "id": "neither-magnet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "interior-laugh",
+   "id": "satisfactory-maintenance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "increasing-daughter",
+   "id": "equivalent-extension",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enclosed-medium",
+   "id": "tender-auction",
    "metadata": {},
    "source": [
     "## Restore seeding unit geodataframe"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "suspended-anniversary",
+   "id": "sudden-liverpool",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-evans",
+   "id": "major-climate",
    "metadata": {},
    "source": [
     "## Query SentinelHub for available Landsat 8 data"
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "secondary-recipient",
+   "id": "seventh-algorithm",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "photographic-legislature",
+   "id": "appreciated-johnston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "breeding-florence",
+   "id": "signal-decline",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "located-vintage",
+   "id": "chinese-slovenia",
    "metadata": {},
    "source": [
     "## Download Landsat 8 data and perform zonal stats"
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "approximate-squad",
+   "id": "acute-scottish",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "gorgeous-beauty",
+   "id": "neither-battlefield",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apart-lucas",
+   "id": "first-thousand",
    "metadata": {},
    "source": [
     "## Filter out snow covered dates"
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "wicked-writer",
+   "id": "chinese-dressing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automotive-emphasis",
+   "id": "corporate-shooting",
    "metadata": {},
    "source": [
     "## Plot the results"
@@ -1704,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "incorporated-draft",
+   "id": "eastern-fields",
    "metadata": {
     "scrolled": false
    },
@@ -1723,6 +1723,7 @@
     }
    ],
    "source": [
+    "# Plot for all SuId's\n",
     "# Setup plot\n",
     "fig, ax = plt.subplots(figsize=(15, 10))\n",
     "\n",
@@ -1747,7 +1748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-accuracy",
+   "id": "supreme-humanity",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -1756,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fossil-tooth",
+   "id": "exceptional-departure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entitled-essence",
+   "id": "sought-element",
    "metadata": {},
    "source": [
     "## Make DF tables consistent between Sentinel 2 and Landsat 8 data"
@@ -1775,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "brazilian-bunch",
+   "id": "objective-patent",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinct-snapshot",
+   "id": "unauthorized-helping",
    "metadata": {},
    "source": [
     "## Save the DF for use in subsequent notebooks"
@@ -1926,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "precious-mambo",
+   "id": "human-wrapping",
    "metadata": {},
    "outputs": [
     {
