--- a/final_notebooks/3-preprocess-rs-timeseries.ipynb
+++ b/final_notebooks/3-preprocess-rs-timeseries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "built-device",
+   "id": "invisible-reporter",
    "metadata": {},
    "source": [
     "# 3 - Pre-process remote sensing time series\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fancy-canada",
+   "id": "dried-consequence",
    "metadata": {},
    "source": [
     "## Setup"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hundred-villa",
+   "id": "resident-minority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "directed-calgary",
+   "id": "broken-arctic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outstanding-concept",
+   "id": "ongoing-casting",
    "metadata": {},
    "source": [
     "## Restore RS time series data"
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "graphic-telephone",
+   "id": "blind-seminar",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dangerous-communication",
+   "id": "planned-masters",
    "metadata": {},
    "source": [
     "## Resample data to consistent temporal sampling"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "valued-capture",
+   "id": "afraid-indian",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wicked-upgrade",
+   "id": "whole-learning",
    "metadata": {},
    "source": [
     "## Calculate moving window"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "finite-rubber",
+   "id": "congressional-functionality",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-peeing",
+   "id": "unlike-style",
    "metadata": {},
    "source": [
     "## Plot the results"
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "interracial-national",
+   "id": "familiar-greece",
    "metadata": {},
    "outputs": [
     {
@@ -476,9 +476,8 @@
     "# Setup plot\n",
     "fig, ax = plt.subplots(figsize=(15, 10))\n",
     "\n",
-    "#landsat_8_time_series_subset.plot(y='MeanNdvi', ax=ax, use_index=True)\n",
-    "#landsat_8_time_series_subset_interpol.plot(y='MeanNdvi', ax=ax, use_index=True)\n",
-    "#landsat_8_time_series_subset_interpol.rolling(window = 26).mean().plot(y='MeanNdvi', ax=ax, use_index=True)\n",
+    "#legend_items = ['Filtered seeding units', 'Annual precipitation']\n",
+    "\n",
     "landsat_8_time_series_rlmean.groupby('SuId').plot(y='MeanNdvi', ax=ax, use_index=True)\n",
     "\n",
     "plt.xlabel(\"Date\", fontsize=20)\n",
@@ -494,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-celtic",
+   "id": "received-header",
    "metadata": {},
    "source": [
     "## Save the DF for use in subsequent notebooks"
@@ -503,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "confused-april",
+   "id": "vertical-fault",
    "metadata": {},
    "outputs": [
     {
