--- a/working_notebooks/notes.ipynb
+++ b/working_notebooks/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "floating-private",
+   "id": "geological-miniature",
    "metadata": {},
    "source": [
     "# Vegetation Restoration Monitoring - Project Notes"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-variation",
+   "id": "illegal-stuff",
    "metadata": {},
    "source": [
     "## Methods\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "partial-greek",
+   "id": "understanding-lying",
    "metadata": {},
    "source": [
     "## Meeting notes\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divided-kenya",
+   "id": "static-banana",
    "metadata": {},
    "source": [
     "## Tutorials\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spatial-scheduling",
+   "id": "spoken-belfast",
    "metadata": {},
    "source": [
     "## TODO list\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "light-despite",
+   "id": "divided-working",
    "metadata": {},
    "source": [
     "## Past notes\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "discrete-blind",
+   "id": "destroyed-completion",
    "metadata": {},
    "source": [
     "## Code snippets"
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "patient-borough",
+   "id": "flexible-blink",
    "metadata": {},
    "outputs": [
     {
@@ -172,16 +172,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "available-strain",
+   "id": "rolled-province",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install -e "
+    "pip install -e."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "understood-block",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!jupyter nbconvert --to html  --no-input ea-applications-overview.ipynb"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "apart-angle",
+   "id": "uniform-gender",
    "metadata": {},
    "source": [
     "## References\n",
