--- a/final_notebooks/final_blog.ipynb
+++ b/final_notebooks/final_blog.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "collectible-victoria",
+   "id": "alleged-equity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unavailable-vanilla",
+   "id": "nervous-characterization",
    "metadata": {},
    "source": [
-    "# Tracking the healing of a scared landscape...\n",
+    "# Tracking the healing of a scarred landscape...\n",
     "***How can we use remote sensing and weather data to monitor vegetation restoration at a disused coal mine in New Mexico?***"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-applicant",
+   "id": "revolutionary-ordinary",
    "metadata": {},
    "source": [
     "## Restoring vegetation communities back to health\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "banned-armor",
+   "id": "initial-tiffany",
    "metadata": {},
    "source": [
     "## Project overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "molecular-hurricane",
+   "id": "measured-resistance",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "indonesian-shelf",
+   "id": "vietnamese-bicycle",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressive-registration",
+   "id": "interested-junior",
    "metadata": {},
    "source": [
     "## Analysis of Landsat 8 data\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ahead-resource",
+   "id": "optimum-progress",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "popular-browse",
+   "id": "concrete-albania",
    "metadata": {},
    "source": [
     "The example time series data above from three separate seeding units indicates strong seasonal variation in NDVI values that is related to the greenup of vegetation (in particular grasses) in the spring and late summer and related senescence (drying out) of vegetation during other periods. The year to year variations in NDVI do show highs and lows that are likely related to interannual variation in rainfall. Aside from the seasonal variation in NDVI these plots do show longer term trends in NDVI; in particular for the examples shown above there is some convergence in the NDVI values with time. This likely indicates the longer term growth and recover of seeded areas."
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "warming-diving",
+   "id": "express-guitar",
    "metadata": {},
    "source": [
     "## Identifying long term trends in NDVI\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sensitive-patent",
+   "id": "irish-filing",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "published-luxembourg",
+   "id": "linear-ferry",
    "metadata": {},
    "source": [
     "## Interpreting the trends in NDVI\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expected-excellence",
+   "id": "utility-cancellation",
    "metadata": {},
    "source": [
     "## Potential tools for land managers\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competitive-treasury",
+   "id": "abroad-bunch",
    "metadata": {},
    "source": [
     "## Resources\n",
